@startuml

title __PIG's Class Diagram__\n

  package guice {
    package guice.pig {
      class DefaultPigService {
          + getName()
      }
    }
  }
  

  package guice {
    package guice.pig {
      class FakeService {
          + getName()
      }
    }
  }
  

  DefaultPigService -up-|> AnimalService
  FakeService -up-|> AnimalService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
